# TuringMachineSimulatorCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  TuringMachineSimulator.sln  doxyfile.cfg  makefile
TuringMachineSimulator/: ClassDiagram.cd  GpUtils.cpp  GpUtils.h  TransitionKey.cpp  TransitionKey.h  TransitionValue.cpp  TransitionValue.h  TuringMachine.cpp  TuringMachine.h  TuringMachineSimulator.vcxproj  TuringMachineSimulator.vcxproj.filters  TuringMachineState.cpp  TuringMachineState.h  main.cpp  makefile
doc/: Doxyfile
doc/html/: GpUtils_8cpp.html  GpUtils_8cpp__incl.map  GpUtils_8cpp__incl.md5  GpUtils_8h.html  GpUtils_8h__dep__incl.map  GpUtils_8h__dep__incl.md5  GpUtils_8h__incl.map  GpUtils_8h__incl.md5  GpUtils_8h_source.html  TransitionKey_8cpp.html  TransitionKey_8cpp__incl.map  TransitionKey_8cpp__incl.md5  TransitionKey_8h.html  TransitionKey_8h__dep__incl.map  TransitionKey_8h__dep__incl.md5  TransitionKey_8h_source.html  TransitionValue_8cpp.html  TransitionValue_8cpp__incl.map  TransitionValue_8cpp__incl.md5  TransitionValue_8h.html  TransitionValue_8h__dep__incl.map  TransitionValue_8h__dep__incl.md5  TransitionValue_8h_source.html  TuringMachineState_8cpp.html  TuringMachineState_8cpp__incl.map  TuringMachineState_8cpp__incl.md5  TuringMachineState_8h.html  TuringMachineState_8h__dep__incl.map  TuringMachineState_8h__dep__incl.md5  TuringMachineState_8h__incl.map  TuringMachineState_8h__incl.md5  TuringMachineState_8h_source.html  TuringMachine_8cpp.html  TuringMachine_8cpp__incl.map  TuringMachine_8cpp__incl.md5  TuringMachine_8h.html  TuringMachine_8h__dep__incl.map  TuringMachine_8h__dep__incl.md5  TuringMachine_8h__incl.map  TuringMachine_8h__incl.md5  (+35 more)
doc/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  namespaces_1.js  pages_0.js  related_0.html  related_0.js  searchdata.js  variables_0.js  variables_1.js
include/: GpUtils.h  GpUtils.hpp  PromptRequests.h  PromptRequests.hpp  State.h  State.hpp  Tests.h  TransitionBase.h  TransitionBase.hpp  TransitionKey.h  TransitionValue.h  TransitionValue.hpp  TuringMachine.h  TuringMachine.hpp  TuringMachineState.h  TuringMachineState.hpp
src/: GpUtils.cpp  PromptRequests.cpp  State.cpp  TransitionBase.cpp  TransitionKey.cpp  TransitionValue.cpp  TuringMachine.cpp  TuringMachineState.cpp  main.cpp
test/: Tests.cpp  test_report.xml
